# ctdai

./: 02_prompts_to_chats.ipynb  LICENSE  README.md  agents_intro.ipynb  huggingface_intro.ipynb  langchain_intro.ipynb  mkdocs.yml  pyproject.toml  rag_intro.ipynb  requirements.txt
docs/: index.md  week1.md  week2.md  week3.md
notebooks/: 01_hello_ai.ipynb  README.md  agents_intro.ipynb  embeddings_intro.ipynb  huggingface_intro.ipynb  ollama_intro.ipynb  rag_intro.ipynb
